# AI-Code_Reviewer

./: .dockerignore  .env.example  .eslintrc.json  .flake8  .gitignore  .semgrepignore  DEPLOYMENT.md  Dockerfile  Makefile  OPENAI_MIGRATION_GUIDE.md  QUICK_START.md  README.md  create_init_files.py  docker-compose.yml  fix_ci_cd.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  setup.cfg  tsconfig.json  verify_setup.sh
.github/: labeler.yml  release-drafter.yml
.github/workflows/: auto-fix.yml  ci-cd.yml  ci.yml  dependency-update.yml  docker-scan.yml  labeler.yml  pr-review.yml  stale.yml
ai/: ai_model_base.py
app/: celery_app.py
app/core/: security.py
config/: __init__.py  custom_rules.yaml  settings.py  validator.py
monitoring/: alerts.yml  prometheus.yml
scripts/: automated_migration.sh  backup.sh  deploy.sh  monitor.sh  setup.sh  test.sh  validate-config.sh  verify-fixes.sh
src/: __init__.py  bot.ts  celery_app.py  commenter.ts  enhanced_review.py  enhanced_review_phase2.py  enhanced_review_phase3.py  enhanced_review_phase4.py  enhanced_review_phase5.py
src/analytics/: metrics_tracker.py
src/api/: __init__.py  analytics_api.py  init.py  server.py
src/api/routes/: init.py
src/audit/: audit_logger.py
src/auth/: rbac.py  sso_integration.py
src/autofix/: code_fixer.py
src/compliance/: compliance_checker.py
src/core/: __init__.py  config.py  init.py  security.py
src/database/: init.py
src/deployment/: self_hosted.py
src/documentation/: doc_generator.py
src/feedback/: OPENAI_MIGRATION_GUIDE.md  feedback_learner.py
src/integrations/: ide_integration.py  init.py  platform_support.py
src/intelligence/: bug_pattern_learner.py  knowledge_base.py  pattern_recognizer.py  severity_scorer.py
src/interactive/: chat_interface.py
src/languages/: language_detector.py
src/models/: init.py  model_selector.py
src/performance/: profiler.py
src/quality/: smell_detector.py
src/rules/: custom_rules_engine.py
src/schemas/: init.py
src/search/: semantic_search.py
src/security/: circuit_breaker.py  env_validator.py  init.py  input_validator.py  rate_limiter.py  secrets_manager.py  security_scanner.py
src/services/: init.py
src/testing/: test_generator.py
src/training/: model_finetuner.py
src/utils/: init.py
tests/: __init__.py  conftest.py  init.py  run_tests.py  test_api.py  test_api_endpoints.py  test_audit_logger.py  test_basic.py  test_code_fixer.py  test_compliance_checker.py  test_config.py  test_custom_rules_engine.py  test_feedback_learner.py  test_full_review_flow.py  test_metrics_tracker.py  test_phase4_comprehensive.py  test_phase5_comprehensive.py  test_rbac.py
