[metadata]
name = ai-code-reviewer
version = 1.0.0
description = Enterprise-grade AI-powered code review system
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/NamelessMonsterr/AI-Code_Reviewer
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.10
install_requires =
    openai>=1.12.0
    fastapi==0.104.1
    uvicorn[standard]==0.24.0
    pydantic[email]==2.5.3
    sqlalchemy==2.0.23
    redis==5.0.1

[options.packages.find]
where = .
include = src*

[options.extras_require]
dev =
    pytest>=7.4.3
    pytest-cov>=4.1.0
    black>=23.12.1
    flake8>=6.1.0

[flake8]
max-line-length = 120
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    *.egg-info
ignore = E203, E266, W503
per-file-ignores =
    __init__.py:F401

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    --verbose
    --cov=src
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
    --cov-fail-under=0
markers =
    integration: Integration tests
    slow: Slow running tests

[coverage:run]
source = src
omit =
    */tests/*
    */test_*.py
    */__pycache__/*
    */venv/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod
